feat: theme presentatio

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,3 +5,23 @@ $dark-primary-color: #293741;
 .bg-primary {
     background-color: $primary-color;
 }
+
+.text-primary {
+    color: $primary-color;
+}
+
+.bg-secondary {
+    background-color: $secondary-color;
+}
+
+.text-secondary {
+    color: $secondary-color;
+}
+
+.bg-dark-primary {
+    background-color: $dark-primary-color;
+}
+
+.text-dark-primary {
+    color: $dark-primary-color;
+}
