--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,9 +2,13 @@ $primary-color: #117fcf;
 $secondary-color: #5C83F0;
 $constrast-color: #620CF0;
 $dark-primary-color: #293741;
+$white : #f4f4f2;
+$light-black: #333333;
 $bg-color: #657273;
 
+//FONTS
 $primary-text-font: 'Roboto', sans-serif;
+$text-font-style: "DM Sans", sans-serif;
 
 .bg-primary {
     background-color: $primary-color;
