finished with animations

--- a/src/components/common/cursosCard/styles.module.scss
+++ b/src/components/common/cursosCard/styles.module.scss
@@ -14,10 +14,12 @@
   position: relative;
   width: 100%;
   height: 100%;
+  border-radius: 5px;
   img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: 5px;
   }
 }
 
@@ -55,5 +57,5 @@
 
 .labelText {
   font-size: 14px;
-  color: $primary-color;
+  color: black;
 }
