--- a/src/components/cursos/styles.module.scss
+++ b/src/components/cursos/styles.module.scss
@@ -2,7 +2,7 @@
 
 .container {
   height: auto;
-  background-color: $white;
+  background-color: #222222;
   padding: 32px 64px;
   position: relative;
   display: flex;
@@ -11,17 +11,11 @@
   flex-direction: column;
 }
 
-.titleContainer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-}
-
 .cardsContainer {
   display: flex;
   gap: 32px;
   flex-wrap: wrap;
   justify-content: center;
   width: 100%;
+
 }
