--- a/src/components/common/cursosCard/styles.module.scss
+++ b/src/components/common/cursosCard/styles.module.scss
@@ -6,8 +6,8 @@
   align-items: center;
   justify-content: center;
   border-radius: 10px;
-  width: 400px;
-  height: 250px;
+  width: 100%;
+  height: 300px;
 }
 
 .imageContainer {
@@ -58,4 +58,5 @@
 .labelText {
   font-size: 14px;
   color: black;
+  font-weight: 600;
 }
